Added the basics of own characters
Added the basics of own characters

--- a/index.html
+++ b/index.html
@@ -40,7 +40,12 @@
         <div>
           <input type="checkbox" class="gombspec checkin"/> Include Symbols
         </div>
-        <div><input type="checkbox" class="own checkin" ><span class="text">Add my own letter(soon)</span>
+        <div><input type="checkbox" class="own checkin" ><span class="text">Add my own letters(soon)</span>
+          <div class="myownletters hidden">
+            <input class="textbox" type="text" maxlength="10" placeholder="Enter your characters">
+            <input type="radio" class="start"name="startend" id="1">Start
+            <input type="radio" class="end" name="startend" id="1">End
+          </div>
         
         </div>
           
