--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         <div>
           <input type="checkbox" class="gombspec checkin"/> Include Symbols
         </div>
-        <div><input type="checkbox" class="own checkin" ><span class="text">Add my own letters(soon)</span>
+        <div><input type="checkbox" class="own checkin" ><span class="text">Add my own characters</span>
           <div class="myownletters hidden">
-            <input class="textbox" type="text" maxlength="10" placeholder="Enter your characters">
+            <input class="textbox" type="text" maxlength="12" placeholder="Enter your characters">
             <input type="radio" class="start"name="startend" id="1">Start
             <input type="radio" class="end" name="startend" id="1">End
           </div>
